deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: periapsis-web
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - periapsis.example.com
      secretName: periapsis-ingress-tls
  rules:
    - host: periapsis.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: periapsis-web
                port:
                  name: http
